fix alignment issues on home view

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -18,7 +18,7 @@
 	flex-direction: row;
 	align-items: center;
 	background-color: rgb(14, 53, 78);
-	padding: 15px 6.5%;
+	padding: 15px 5%;
 	text-align: left;
 	color: white;
 	z-index: 10;
