--- a/src/stylesheets/components/_grade.scss
+++ b/src/stylesheets/components/_grade.scss
@@ -11,7 +11,6 @@
 .gradeLetterContainer {
 	display: flex;
 	justify-content: space-around;
-	width: 25%;
 }
 
 .seal {
